# falaai

./: .env.example  .gitignore  FalaAiMetaSchema.json  README.md  alembic.ini  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 20240209_0001_create_usuarios_admin.py  20240209_0002_add_usuarios_normais.py  20240209_0003_create_formularios.py  84f1e15cedd1_add_participante_table.py  8c3fd2f15ac3_adicionando_coluna_is_activate.py  b3477bb87afc_adicionando_coluna.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: __init__.py  auth.py  formularios.py  participantes.py  usuarios_admin.py
app/core/: config.py  security.py
app/crud/: __init__.py  formulario.py  participante.py  usuario_admin.py
app/db/: base.py  session.py
app/models/: __init__.py  formulario.py  participante.py  usuario_admin.py  usuario_normal.py
app/schemas/: __init__.py  formulario.py  participante_schema.py  usuario_admin.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
scripts/: bootstrap.sh  create_admin.py  migrate.sh
tests/: conftest.py  test_auth.py  test_usuarios_admin.py
